--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "framer-motion": "^6.0.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "react": "^19.1.0",
